--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             },
             {
   "title": "Rawon",
-  "image": "Rawon.JPG",
+  "image": "rawon.JPG",
   "ingredients": [
     "500 gram daging sapi (bagian sandung lamur atau daging iga), potong dadu",
     "2 liter air",
@@ -402,7 +402,7 @@
             },
             {
                 title: "sate ayam",
-                image: "sate.jpg",
+                image: "satejpg.jpg",
                 ingredients: [
                    "500 gram daging ayam fillet, potong dadu kecil",
                    "20 tusuk sate, rendam air",
