--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             },
             {
   "title": "Rawon",
-  "image": "rawon.JPG",
+  "image": "rawon.jpg",
   "ingredients": [
     "500 gram daging sapi (bagian sandung lamur atau daging iga), potong dadu",
     "2 liter air",
